# live555_rtsp_client

./: CMakeLists.txt  main.cpp
